# auto-clicker

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
icons/: icon.icns
src/: lib.rs  main.rs
src/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
ui/: index.html  script.js  styles.css
